--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -1,26 +1,3 @@
-##
-## $Log: Makefile,v $
-## Revision 1.1.1.1  1999/04/17 22:16:31  morgan
-## release 1.0 of libcap
-##
-## Revision 1.5  1998/05/24 22:54:09  morgan
-## updated for 2.1.104
-##
-## Revision 1.4  1997/05/14 05:17:13  morgan
-## autoconf rearrangement from Zefram
-##
-## Revision 1.3  1997/05/04 05:34:59  morgan
-## cleaner
-##
-## Revision 1.2  1997/04/28 00:57:11  morgan
-## fixes and zefram's patches
-##
-## Revision 1.1  1997/04/21 04:33:29  morgan
-## Initial revision
-##
-##
-##
-
 #
 # defines
 #
@@ -56,12 +33,15 @@ cap_names.sed: Makefile /usr/include/linux/capability.h
 #	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define CAP_\([^ \t]*\)[ \t]*\([^ \t]*\)/  \{ \2, \"\1\" \},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < /usr/include/linux/capability.h | fgrep -v 0x > cap_names.sed
 
 $(MINLIBNAME): $(OBJS)
-	$(LD) -soname $(MAJLIBNAME) -x -shared -o $@ $(OBJS)
+	$(CC) -Wl,-soname -Wl,$(MAJLIBNAME) -Wl,-x -shared -o $@ $(OBJS)
 	ln -sf $(MINLIBNAME) $(MAJLIBNAME)
 	ln -sf $(MAJLIBNAME) $(LIBNAME)
 
 %.o: %.c $(INCLS)
 	$(CC) $(CFLAGS) -c $< -o $@
+
+cap_sys.o: cap_sys.c $(INCLS)
+	$(CC) -fPIC -Wall -O2 -c $< -o $@
 
 install: all
 	mkdir -p -m 0755 $(INCDIR)/sys
