Support for static library creation (libcap.a) + misc
Incorporate fixes from Red Hat rpm (1.10-25).

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -6,20 +6,21 @@ include ../Make.Rules
 #
 # Library version
 #
-LIBNAME=libcap.so
+LIBNAME=$(LIBTITLE).so
+STALIBNAME=$(LIBTITLE).a
 #
 
 FILES=cap_alloc cap_proc cap_extint cap_flag cap_text cap_sys
 
 # for later when there is filesystem support for cap's:
-#FILES += cap_file 
+#FILES += cap_file
 
 INCLS=libcap.h cap_names.h $(INCS)
 OBJS=$(addsuffix .o, $(FILES))
 MAJLIBNAME=$(LIBNAME).$(VERSION)
 MINLIBNAME=$(MAJLIBNAME).$(MINOR)
 
-all: $(MINLIBNAME)
+all: $(MINLIBNAME) $(STALIBNAME)
 
 _makenames: _makenames.c cap_names.sed
 	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
@@ -32,8 +33,12 @@ cap_names.sed: Makefile /usr/include/linux/capability.h
 	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define \([^ \t]*\)[ \t]*\([^ \t]*\)/  \{ \2, \"\1\" \},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < /usr/include/linux/capability.h | fgrep -v 0x > cap_names.sed
 #	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define CAP_\([^ \t]*\)[ \t]*\([^ \t]*\)/  \{ \2, \"\1\" \},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < /usr/include/linux/capability.h | fgrep -v 0x > cap_names.sed
 
+$(STALIBNAME): $(OBJS)
+	ar rcs $(STALIBNAME) $(OBJS)
+	ranlib $(STALIBNAME)
+
 $(MINLIBNAME): $(OBJS)
-	$(CC) -Wl,-soname -Wl,$(MAJLIBNAME) -Wl,-x -shared -o $@ $(OBJS)
+	$(CC) $(COPTFLAG) -Wl,-soname,$(MAJLIBNAME) -Wl,-x -shared -o $@ $(OBJS)
 	ln -sf $(MINLIBNAME) $(MAJLIBNAME)
 	ln -sf $(MAJLIBNAME) $(LIBNAME)
 
@@ -47,6 +52,7 @@ install: all
 	mkdir -p -m 0755 $(INCDIR)/sys
 	install -m 0644 include/sys/capability.h $(INCDIR)/sys
 	mkdir -p -m 0755 $(LIBDIR)
+	install -m 0644 $(STALIBNAME) $(LIBDIR)/$(MINLIBNAME)
 	install -m 0644 $(MINLIBNAME) $(LIBDIR)/$(MINLIBNAME)
 	ln -sf $(MINLIBNAME) $(LIBDIR)/$(MAJLIBNAME)
 	ln -sf $(MAJLIBNAME) $(LIBDIR)/$(LIBNAME)
@@ -54,7 +60,6 @@ install: all
 
 clean:
 	$(LOCALCLEAN)
-	rm -f $(OBJS) $(LIBNAME)*
+	rm -f $(OBJS) $(LIBNAME)* $(STALIBNAME)
 	rm -f cap_names.h cap_names.sed _makenames
 	cd include/sys && $(LOCALCLEAN)
-
