Give a concrete example (morgan gets CAP_SETFCAP)

--- a/pam_cap/capability.conf
+++ b/pam_cap/capability.conf
@@ -15,8 +15,8 @@
 # Here are some sample lines (remove the preceding '#' if you want to
 # use them
 
-## user 'morgan' gets all of the available inheritable capabilities
-# all		morgan
+## user 'morgan' gets the CAP_SETFCAP inheritable capability
+cap_setfcap		morgan
 
 ## user 'luser' just inherits two capabilities (CAP_NET_RAW and CAP_FOWNER)
 # cap_net_raw,cap_fowner	luser
