This is libcap-2.00.
This revision of libcap has support for 32-bit and 64-bit capabilities.
It also supports filesystem capabilities of both sizes.

--- a/pam_cap/Makefile
+++ b/pam_cap/Makefile
@@ -6,6 +6,13 @@ include ../Make.Rules
 all: pam_cap.so
 	$(MAKE) testcompile
 
+install:
+	@echo "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+	@echo "X                                                X"
+	@echo "X Need to figure out where to install pam_cap.so X"
+	@echo "X                                                X"
+	@echo "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+
 pam_cap.so: pam_cap.o
 	$(LD) -o pam_cap.so $< $(LIBS)
 
@@ -16,4 +23,4 @@ testcompile: test.c pam_cap.o
 	$(CC) $(CFLAGS) -o $@ $+ -lpam -ldl $(LIBS)
 
 clean:
-	rm -f *.o *.so testcompile
+	rm -f *.o *.so testcompile *~
