Introduce two new capability <-> text helper functions.
_cap_names was a really clumsy interface. With this
commit, we add cap_to_name() and cap_from_name() with
manual documentation too.

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,4 @@
 #
-# $Id: Makefile,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
-#
 # Makefile for libcap documentation
 #
 
@@ -13,7 +11,8 @@ MAN3S = cap_init.3 cap_free.3 cap_dup.3 \
 	cap_get_proc.3 cap_set_proc.3 \
 	cap_get_file.3 cap_get_fd.3 cap_set_file.3 cap_set_fd.3 \
 	cap_copy_ext.3 cap_size.3 cap_copy_int.3 \
-	cap_from_text.3 cap_to_text.3 _cap_names.3 \
+	cap_from_text.3 cap_to_text.3 cap_from_name.3 cap_to_name.3 \
+	_cap_names.3 \
 	capsetp.3 capgetp.3
 MAN8S = getcap.8 setcap.8
 
