--- a/progs/Makefile
+++ b/progs/Makefile
@@ -4,7 +4,7 @@ include $(topdir)/Make.Rules
 #
 # Programs: all of the examples that we will compile
 #
-PROGS=getpcaps getcap setcap
+PROGS=getpcaps getcap setcap capsh
 
 all: $(PROGS)
 
