We don't need to export _cap_names[] any more.
I've added perfect hash generation support for looking
up names (if you have gperf installed).

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -16,9 +16,15 @@ INCLS=libcap.h cap_names.h $(INCS)
 OBJS=$(addsuffix .o, $(FILES))
 MAJLIBNAME=$(LIBNAME).$(VERSION)
 MINLIBNAME=$(MAJLIBNAME).$(MINOR)
+GPERF_OUTPUT = _caps_output.gperf
 LDFLAGS+=-lattr
 
 all: $(MINLIBNAME) $(STALIBNAME)
+
+ifeq ($(shell gperf --version > /dev/null 2>&1 && echo yes),yes)
+USE_GPERF_OUTPUT = $(GPERF_OUTPUT)
+INCLUDE_GPERF_OUTPUT = -include $(GPERF_OUTPUT)
+endif
 
 _makenames: _makenames.c cap_names.sed
 	$(CC) $(CFLAGS) $< -o $@
@@ -26,10 +32,12 @@ _makenames: _makenames.c cap_names.sed
 cap_names.h: _makenames
 	./_makenames > cap_names.h
 
+$(GPERF_OUTPUT): cap_names.sed
+	sed -e 's/[\{\"]//g' -e 's/\}.*//' -e '1istruct __cap_token_s { const char *name; int index; };\n%{\nconst struct __cap_token_s *__cap_lookup_name(const char *, unsigned int);\n%}\n%%' $< | gperf --ignore-case --language=ANSI-C --readonly --null-strings --global-table --hash-function-name=__cap_hash_name --lookup-function-name="__cap_lookup_name" -c -t -m20 | indent -kr > $@
+
 cap_names.sed: Makefile $(KERNEL_HEADERS)/linux/capability.h
 	@echo "=> making cap_names.c from <linux/capability.h>"
-	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define \([^ \t]*\)[ \t]*\([^ \t]*\)/  \{ \2, \"\1\" \},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < $(KERNEL_HEADERS)/linux/capability.h | fgrep -v 0x > cap_names.sed
-#	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define CAP_\([^ \t]*\)[ \t]*\([^ \t]*\)/  \{ \2, \"\1\" \},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < /usr/include/linux/capability.h | fgrep -v 0x > cap_names.sed
+	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define \([^ \t]*\)[ \t]*\([^ \t]*\)/\{\"\1\",\2\},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < $(KERNEL_HEADERS)/linux/capability.h | fgrep -v 0x > $@
 
 $(STALIBNAME): $(OBJS)
 	ar rcs $(STALIBNAME) $(OBJS)
@@ -42,6 +50,9 @@ $(MINLIBNAME): $(OBJS)
 
 %.o: %.c $(INCLS)
 	$(CC) $(CFLAGS) -c $< -o $@
+
+cap_text.o: cap_text.c $(USE_GPERF_OUTPUT)
+	$(CC) $(CFLAGS) $(INCLUDE_GPERF_OUTPUT) -c $< -o $@
 
 install: all
 	mkdir -p -m 0755 $(INCDIR)/sys
@@ -56,5 +67,5 @@ install: all
 clean:
 	$(LOCALCLEAN)
 	rm -f $(OBJS) $(LIBNAME)* $(STALIBNAME)
-	rm -f cap_names.h cap_names.sed _makenames
+	rm -f cap_names.h cap_names.sed _makenames $(GPERF_OUTPUT)
 	cd include/sys && $(LOCALCLEAN)
