do not use the '-s' flag with `install`
The `install` program strips binaries when given the '-s' flag.  This step
should be left up to package maintainers to handle the stripping, especially
since the `install` program will always execute `strip` -- this is no good
for cross-compiling for example.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>
Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/progs/Makefile
+++ b/progs/Makefile
@@ -17,7 +17,7 @@ $(PROGS): %: %.o
 install: all
 	mkdir -p -m 0755 $(SBINDIR)
 	for p in $(PROGS) ; do \
-		install -s -m 0755 $$p $(SBINDIR) ; \
+		install -m 0755 $$p $(SBINDIR) ; \
 	done
 
 clean:
