Do not run ldconfig for FAKEROOT installs
If you're installing into a temporary directory, then running ldconfig will
simply waste CPU and I/O time.  The install location will not be any path
that ldconfig searches, and generally people build as non-root so the
ldconfig binary will run for a while before erroring out due to lack of
permissions.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>
Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -62,7 +62,9 @@ install: all
 	install -m 0644 $(MINLIBNAME) $(LIBDIR)/$(MINLIBNAME)
 	ln -sf $(MINLIBNAME) $(LIBDIR)/$(MAJLIBNAME)
 	ln -sf $(MAJLIBNAME) $(LIBDIR)/$(LIBNAME)
+ifeq ($(FAKEROOT),)
 	-/sbin/ldconfig
+endif
 
 clean:
 	$(LOCALCLEAN)
