Do not hard code toolchain binaries
If you are cross-compiling, you cannot execute `ar` and `ranlib` on the
target library, otherwise things may break.  Here we create standard AR
and RANLIB variables which can easily be overridden by the environment.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>
Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -40,8 +40,8 @@ cap_names.sed: Makefile $(KERNEL_HEADERS)/linux/capability.h
 	@sed -ne '/^#define[ \t]CAP[_A-Z]\+[ \t]\+[0-9]\+/{s/^#define \([^ \t]*\)[ \t]*\([^ \t]*\)/\{\"\1\",\2\},/;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/;p;}' < $(KERNEL_HEADERS)/linux/capability.h | fgrep -v 0x > $@
 
 $(STALIBNAME): $(OBJS)
-	ar rcs $(STALIBNAME) $(OBJS)
-	ranlib $(STALIBNAME)
+	$(AR) rcs $(STALIBNAME) $(OBJS)
+	$(RANLIB) $(STALIBNAME)
 
 $(MINLIBNAME): $(OBJS)
 	$(LD) $(LDFLAGS) $(COPTFLAG) -Wl,-soname,$(MAJLIBNAME) -o $@ $(OBJS)
