Fix libcap to build while using more than one make job
Fixes build issues while using more than one make job, assuring that
cap_names.h is generated before compiling cap_text.c.

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -51,7 +51,7 @@ $(MINLIBNAME): $(OBJS)
 %.o: %.c $(INCLS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
-cap_text.o: cap_text.c $(USE_GPERF_OUTPUT)
+cap_text.o: cap_text.c $(USE_GPERF_OUTPUT) $(INCLS)
 	$(CC) $(CFLAGS) $(INCLUDE_GPERF_OUTPUT) -c $< -o $@
 
 install: all
