--- a/pam_cap/capability.conf
+++ b/pam_cap/capability.conf
@@ -16,10 +16,10 @@
 # use them
 
 ## user 'morgan' gets the CAP_SETFCAP inheritable capability
-cap_setfcap		morgan
+#cap_setfcap		morgan
 
-## user 'luser' just inherits two capabilities (CAP_NET_RAW and CAP_FOWNER)
-# cap_net_raw,cap_fowner	luser
+## user 'luser' inherits the CAP_DAC_OVERRIDE capability
+#cap_dac_override	luser
 
 ## 'everyone else' gets no inheritable capabilities
 none  *
