Fix cap_copy_int(), add two functions cap_get_pid() and cap_compare()
Test new and old function with modified test.

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/contrib/bug400591/Makefile
+++ b/contrib/bug400591/Makefile
@@ -2,7 +2,8 @@ all: bug
 
 bug: bug.c ../../libcap Makefile
 	make -C ../../libcap
-	cc --static -o $@ $< -L../../libcap -lcap
+	cc -g -I../../libcap/include --static -o $@ $< -L../../libcap -lcap
+	./bug
 
 clean:
 	rm -f bug.o bug
