--- a/doc/Makefile
+++ b/doc/Makefile
@@ -7,7 +7,7 @@ include $(topdir)/Make.Rules
 
 MAN3S = cap_init.3 cap_free.3 cap_dup.3 \
 	cap_clear.3 cap_clear_flag.3 cap_get_flag.3 cap_set_flag.3 \
-	cap_get_proc.3 cap_set_proc.3 \
+	cap_compare.3 cap_get_proc.3 cap_set_proc.3 \
 	cap_get_file.3 cap_get_fd.3 cap_set_file.3 cap_set_fd.3 \
 	cap_copy_ext.3 cap_size.3 cap_copy_int.3 \
 	cap_from_text.3 cap_to_text.3 cap_from_name.3 cap_to_name.3 \
