Make programs dynamically linked.
Suggestion from the Slackware folk (Thanks Robby Workman for
pointing out Pat's change).

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/progs/Makefile
+++ b/progs/Makefile
@@ -7,7 +7,9 @@ include $(topdir)/Make.Rules
 PROGS=getpcaps getcap setcap capsh
 BUILD=$(PROGS) verify-caps
 
+ifneq ($(DYNAMIC),yes)
 LDFLAGS += --static 
+endif
 LDLIBS += -lcap
 
 all: $(BUILD)
