Default to installing setcap with an inheritable capability.
For my conveneince, default to installing an inheritable
file capability on setcap when installed. This requires the
process inherit a capability for it to take effect, but that's
what pam_cap is for...

You can disable this install feature with:

   make RAISE_SETFCAP=no install

Also, clean up Make files and a test, and add more comments.
The make files needed a fix (remove -lpam from pam_cap/Makefile)
and I've added a number of comments in support of various issues
folk have asked me about.

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/progs/Makefile
+++ b/progs/Makefile
@@ -29,6 +29,9 @@ install: all
 	for p in $(PROGS) ; do \
 		install -m 0755 $$p $(SBINDIR) ; \
 	done
+ifeq ($(RAISE_SETFCAP),yes)
+	$(SBINDIR)/setcap cap_setfcap=i $(SBINDIR)/setcap
+endif
 
 clean:
 	$(LOCALCLEAN)
