Make.Rules: add gperf detection and fix INDENT test
Move gperf detection from libcap/Makefile to Make.Rules to be more cross-environment friendly.
Fix INDENT test (dollar sign must be doubled):
http://www.gnu.org/software/make/manual/make.html#Variables-in-Recipes

Signed-off-by: Matthieu Crapet <mcrapet@gmail.com>
Signed-off-by: Andrew G Morgan <morgan@kernel.org>

--- a/libcap/Makefile
+++ b/libcap/Makefile
@@ -28,7 +28,7 @@ GPERF_OUTPUT = _caps_output.gperf
 
 all: $(MINLIBNAME) $(STALIBNAME) libcap.pc
 
-ifeq ($(shell gperf --version > /dev/null 2>&1 && echo yes),yes)
+ifeq ($(BUILD_GPERF),yes)
 USE_GPERF_OUTPUT = $(GPERF_OUTPUT)
 INCLUDE_GPERF_OUTPUT = -include $(GPERF_OUTPUT)
 endif
