--- a/progs/Makefile
+++ b/progs/Makefile
@@ -4,10 +4,7 @@ include $(topdir)/Make.Rules
 #
 # Programs: all of the examples that we will compile
 #
-PROGS=getpcaps capsh
-ifeq ($(LIBATTR),yes)
-PROGS += getcap setcap
-endif
+PROGS=getpcaps capsh getcap setcap
 
 BUILD=$(PROGS)
 
